[package]
name = "chipinho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "chipinho"
# path = "src/bin/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# strip = true
# lto = true
# wasm-opt = true

[dependencies]
