[package]
name = "chipinho"
version = "0.1.0"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { version = "0.2.92" }
