[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[dependencies]
wasm-bindgen = "0.2.90"
chipinho = { path = "../../chipinho/" }
